fix: Hilt & Gradle version mismatch fix

--- a/hilt/app/src/main/res/navigation/navigation.xml
+++ b/hilt/app/src/main/res/navigation/navigation.xml
@@ -6,6 +6,6 @@
 
     <fragment
         android:id="@+id/mainFragment"
-        android:name="com.example.hlit_ex.MainFragment"
+        android:name="com.example.hlit_ex.ui.view.fragment.MainFragment"
         android:label="MainFragment" />
 </navigation>
