--- a/hilt/app/src/main/res/navigation/navigation.xml
+++ b/hilt/app/src/main/res/navigation/navigation.xml
@@ -7,5 +7,13 @@
     <fragment
         android:id="@+id/mainFragment"
         android:name="com.example.hlit_ex.ui.view.fragment.MainFragment"
-        android:label="MainFragment" />
+        android:label="MainFragment" >
+        <action
+            android:id="@+id/action_mainFragment_to_summonerInputDialog"
+            app:destination="@id/summonerInputDialog" />
+    </fragment>
+    <dialog
+        android:id="@+id/summonerInputDialog"
+        android:name="com.example.hlit_ex.ui.view.dialog.SummonerInputDialog"
+        android:label="SummonerInputDialog" />
 </navigation>
